--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "win-audio",
   "version": "1.2.0",
   "description": "Get, Set and Watch Speaker/Microphone Volume on Windows",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm i && node sample",
     "test2": "npm i && node test"
